# PL_2020_PBL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakelists.txt  ConsoleModule.cpp  ConsoleModule.hpp  Event.hpp  IModule.hpp  InputModule.hpp  Message.hpp  Message.inl  MessageBus.cpp  MessageBus.hpp  NewComponent.sh  NewSystem.sh  README.txt  build.sh  components.sh  config.sh  copyRes.sh  countcpp.sh  imgui.ini  main.cpp  reconfig.bat  reconfig.sh  run.sh  systems.sh
docs/: changelog_t7.txt
include/: MessageBus.hpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/xoshiro/: xoshiro.h  xoshiro256starstar.c
misc/: LineProjectionVisualizer.ggb
project/: main.cpp
project/Audio/include/: AudioModule.hpp
project/Audio/src/: AudioModule.cpp
project/Autogen/include/: note.txt
project/Callbacks/include/: CallbacksModule.hpp
project/Callbacks/src/: CallbacksModule.cpp
project/Core/include/: Core.hpp  GamePlayModule.hpp  ModelsPaths.inl  ScenesPaths.hpp  ScenesPaths.inl  Utils.hpp
project/Core/src/: Core.cpp  GamePlayModule.cpp  Utils.cpp
project/Editor/include/: EditorDataStructures.inl  EditorModule.hpp
project/Editor/src/: EditorModule.cpp
project/GameSystems/Components/: AudioListener.inl  AudioSource.inl  BillboardRenderer.inl  Bone.inl  BoxCollider.inl  Button.inl  Camera.inl  Collider.inl  Enemy.inl  EnemyAnimation.inl  Hideout.inl  HydroAccelerator.inl  HydroBody.inl  HydroSurface.inl  Kayak.hpp  Kayak.inl  Light.inl  MeshRenderer.inl  Paddle.inl  PhysicalInputKeymap.inl  Player.inl  RectTransform.inl  Renderer.inl  Rigidbody.inl  Skeleton.inl  SkinnedMeshRenderer.inl  SphereCollider.inl  TextRenderer.inl  Transform.hh  Transform.inl  UiRenderer.inl  UiSortingGroup.inl
project/GameSystems/include/: Component.inl  Entity.hpp  Entity.ipp  GameSystemsModule.hpp  GamepadDataStructures.inl  System.hpp
project/GameSystems/src/: Entity.cpp  GameSystemsModule.cpp  System.cpp
project/Input/include/: GamepadDataStructures.inl  InputModule.hpp  MouseDataStructures.inl
project/Input/src/: InputModule.cpp
project/MessageBus/include/: Event.hpp  Event.inl  IModule.inl  IMsgReceiver.inl  Message.inl  MessageBus.hpp
project/MessageBus/src/: MessageBus.cpp
project/ObjectManager/include/: AssetReader.hpp  AssetStructers.inl  AudioFile.hpp  FileStructures.inl  IFileSystem.inl  ISerializable.hpp  ISerializable.inl  ObjectContainer.hpp  ObjectExceptions.inl  ObjectMaker.hpp  ObjectMaker.ipp  ObjectModule.hpp  ObjectModule.ipp  ObjectsModule.ipp  SceneReader.hpp  SceneWriter.hpp  TerrainUtils.hpp
project/ObjectManager/src/: AssetReader.cpp  AudioFile.cpp  ISerializable.cpp  ObjectContainer.cpp  ObjectMaker.cpp  ObjectModule.cpp  SceneReader.cpp  SceneWriter.cpp  TerrainUtils.cpp
project/ObjectsManager/include/: ObjectModule.hpp  ObjectsModule.ipp  StackLikeAllocator.hpp  StackLikeAllocator.ipp
project/ObjectsManager/src/: ObjectModule.cpp  StackLikeAllocator.cpp
project/Physic/include/: PhysicEventListener.hpp  PhysicModule.hpp  PhysicStructures.inl
project/Physic/src/: PhysicEventListener.cpp  PhysicModule.cpp
project/Renderer/include/: Animation.hpp  AnimationDataStructures.inl  Bone.inl  BuiltInShaders.inl  BuiltInShapes.inl  Cubemap.hpp  CubemapHdr.hpp  DistanceComparer.hpp  Material.hpp  Mesh.hpp  Mesh.inl  MeshCustom.hpp  MeshDataStructures.inl  MeshQuad.hpp  MeshSkinned.hpp  Quad.hpp  RenderPacket.hpp  RendererModule.hpp  Shader.hpp  ShaderExceptions.hpp  SkinnedMesh.hpp  Texture.hpp
project/Renderer/src/: Animation.cpp  Cubemap.cpp  CubemapHdr.cpp  DistanceComparer.cpp  Material.cpp  Mesh.cpp  MeshCustom.cpp  MeshQuad.cpp  MeshSkinned.cpp  Quad.cpp  RendererModule.cpp  Shader.cpp  SkinnedMesh.cpp  Texture.cpp
project/ResourceManager/include/: Animation.hpp  AssetStructers.inl  AudioClipAsset.inl  FileStructures.inl  Model.inl  ModelAsset.inl  ResourceModule.hpp  ShaderAsset.inl  TextureAsset.inl
project/ResourceManager/src/: ResourceModule.cpp
project/Resources/Models/: Test.FBX
project/Scene/include/: SceneModule.hpp
project/Scene/src/: SceneModule.cpp
project/Terminal/include/: ConsoleModule.hpp
project/Terminal/src/: ConsoleModule.cpp
project/UI/include/: Font.hpp  UiModule.hpp
project/UI/src/: Font.cpp  UiModule.cpp
resources/: currentFlow.txt  hideColliders.txt
resources/Models/: BoneBox.FBX  Box.FBX  Cliffs.FBX  House Dancing.FBX  Karakter.FBX  Kayak.FBX  Kayak_low_poly.FBX  Left_bank.FBX  Right_bank.FBX  Riverbed.FBX  Water.FBX  WaterPlane_Center.FBX  cylinder_skin.FBX  dance_pose.FBX  dance_skin_pose.FBX  hierarchyTest.FBX  kajak_new.FBX  kajak_wjoslo_plastus.FBX  paddle_and_hands.FBX  plane_skin.DAE  plane_skin.FBX  test_riverbed.FBX  unit_sphere.FBX
resources/Models/Character_final/: Final_character_rigged.FBX
resources/Models/Kayak_final/: Final_kayak_and_paddle.FBX  Final_physics_meshes.FBX
resources/Models/Unity/: colliders.txt  exportinfo.txt
resources/Scenes/: gameScene.json  intro.icpp  introScene.json  mainMenuScene.json  mainScene.json  main_Menu.icpp  newScene.icpp  savedScene.json  scene_old.icpp  scene_old.txt  selectCargoScene.icpp  selectCargoScene.json  testScene.icpp  testScene.json
resources/Shaders/FlowmapWater/: FlowmapWater.frag
resources/Shaders/PostProcessing/: AllCombine.frag  AllCombineFXAA.frag  BloomCombine.frag  GaussianBlur.frag  PosNormBuffers.frag  Quad.vert  SSAO.frag  SSAOblur.frag  ViewSpaceValues.vert
resources/Shaders/SimpleLit/: SimpleLit.frag  SimpleLit.vert
resources/Shaders/SkyboxCubemap/: SkyboxCubemap.frag  SkyboxCubemap.vert
resources/Shaders/StandardPBR/: StandardPBR.frag  StandardPBR.vert
resources/Shaders/StandardPBRCutout/: StandardPBRCutout.frag  StandardPBRCutout.vert
resources/Shaders/StandardSkinned/: StandardSkinned.frag  StandardSkinned.vert
resources/Shaders/StandardTerrain/: StandardTerrain.frag  StandardTerrain.vert
resources/Shaders/TextStandard/: TextStandard.frag  TextStandard.vert
resources/Splatmaps/: Terrain_splatmap_0.tga
resources/Terrain/: Terrain_splatmap_0.tga
sources/: InputModule.cpp  MessageBus.cpp
(+263 files in other folders)
